// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badges should render correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Badge
      badgeName="superTrader"
      iconId="star"
      isDispute={false}
      isUnlocked={false}
    />
    <Badge
      badgeName="fastTrader"
      iconId="zap"
      isDispute={false}
      isUnlocked={false}
    />
  </View>
  <Badge
    badgeName="ambassador"
    iconId="award"
    isDispute={false}
    isUnlocked={false}
  />
</View>
`;

exports[`Badges should render correctly with unlocked badges 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Badge
      badgeName="superTrader"
      iconId="star"
      isDispute={false}
      isUnlocked={true}
    />
    <Badge
      badgeName="fastTrader"
      iconId="zap"
      isDispute={false}
      isUnlocked={true}
    />
  </View>
  <Badge
    badgeName="ambassador"
    iconId="award"
    isDispute={false}
    isUnlocked={true}
  />
</View>
`;
